syntax = "proto3";
package core.interquery.v1beta1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/QuadrateOrg/core/x/interquery/types";

message Query {
  string id = 1;
  string connection_id = 2;
  string chain_id = 3;
  string query_type = 4;
  bytes request = 5;
  // change these to uint64 in v0.5.0
  int64 period = 6;
  int64 last_height = 7;
  string callback_id = 8;
  uint64 ttl = 9;
  string last_emission = 10 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string from_address = 11 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message DataPoint {
  string id = 1;
  // change these to uint64 in v0.5.0
  string remote_height = 2 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  string local_height = 3 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  bytes value = 4 [(gogoproto.jsontag) = "result,omitempty"];
}
