syntax = "proto3";
package core.liquidstakeibc.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/QuadrateOrg/core/x/liquidstakeibc/types";

// Params defines the parameters for the module.
message Params {

  string admin_address = 1
      [ (cosmos_proto.scalar) =
            "cosmos.AddressString" ]; // protocol admin address

  string fee_address = 2 [ (cosmos_proto.scalar) =
                               "cosmos.AddressString" ]; // protocol fee address

  // fields 3 and 4 were migrated to on-chain params.
  // check https://github.com/persistenceOne/core-native/pull/732.
  reserved 3; // upper_c_value_limit
  reserved 4; // lower_c_value_limit
}
