syntax = "proto3";
package core.stable.v1beta1;

import "gogoproto/gogo.proto";
import "core/stable/params.proto";

option go_package = "github.com/QuadrateOrg/core/x/stable/types";

// GenesisState defines the stable module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];

  string port_id = 2; 
}
